# cuda_training

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Laplace/: .gitignore  cpu_laplace.cpp  gpu_laplace.todo.cu
Laplace/solution/: gpu_laplace.ans.cu  gpu_laplace.smem.cu
boxfilter/: .gitignore  CMakeLists.txt  Makefile  boxfilter.cu  cmake_install.cmake
convolve/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  convolve.cu
cudaDeviceProperties/: CMakeLists.txt  Makefile  cmake_install.cmake  cudaDeviceInfo  cudaDeviceInfo.cu
docs/: day1.org  day2.org  day3.org
erode/: Makefile  erode.cpp
erode/solution/: erode.cpp
hist/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  hist.cu  hist.cu_ATOMIC
intro/: CMakeLists.txt  Makefile  cmake_install.cmake  increment.cu  vector_addition.cu
intro/solution/: increment.cu
latticeBoltzmann/: cpu_lbm.cpp  gpu_lbm.cu
mandelbrot/: cpu_Mandelbrot.cpp  gpu_MandelBrotSet.cu
matrixMultiplication/: .gitignore  Makefile
median2/: .gitignore  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  median2  median2.cu
opengl-interop/: simpleGL  simpleGL.cu
pi/: CMakeLists.txt  Makefile  cmake_install.cmake  pi  pi.cu  pi.cu_512  pi.cu_COAL  pi.cu_ERROR  pi.cu_SLOW
reduction/: CMakeLists.txt  Makefile  cmake_install.cmake  reduction.cu  reduction.cu_DONE  reduction.cu_SIMPLE
textures/: CMakeLists.txt  Makefile  cmake_install.cmake  texture  texture.cu
transpose/: CMakeLists.txt  Makefile  cmake_install.cmake  transpose.cu  transpose.cu_ORIGINAL  transpose.cu_SIMPLE
(+16 files in other folders)
